--- a/index.html
+++ b/index.html
@@ -53,7 +53,145 @@
             </div>
         </div>
         <div class="main">
-
+            <div class="projects">
+                <h2>My Disciples</h2>
+                <div class="project">
+                    <div class="side-panel"></div>
+                    <div class="text">
+                        <h3>Peter</h3>
+                        <p>Peter was an alright disciple.</p>
+                    </div>
+                    <div class="card-buttons">
+                        <img src="Images/star-david.svg">
+                        <img src="Images/trash-can-outline.svg">
+                        <img src="Images/send.svg">
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="side-panel"></div>
+                    <div class="text">
+                        <h3>James</h3>
+                        <p>James was an alright disciple.</p>
+                    </div>
+                    <div class="card-buttons">
+                        <img src="Images/star-david.svg">
+                        <img src="Images/trash-can-outline.svg">
+                        <img src="Images/send.svg">
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="side-panel"></div>
+                    <div class="text">
+                        <h3>John</h3>
+                        <p>John was an alright disciple.</p>
+                    </div>
+                    <div class="card-buttons">
+                        <img src="Images/star-david.svg">
+                        <img src="Images/trash-can-outline.svg">
+                        <img src="Images/send.svg">
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="side-panel"></div>
+                    <div class="text">
+                        <h3>Thomas</h3>
+                        <p>Thomas was an alright disciple.
+                            His discipling was alright.
+                            Why, do you ask? I haven't the slightest
+                            idea. 
+                        </p>
+                    </div>
+                    <div class="card-buttons">
+                        <img src="Images/star-david.svg">
+                        <img src="Images/trash-can-outline.svg">
+                        <img src="Images/send.svg">
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="side-panel"></div>
+                    <div class="text">
+                        <h3>Andrew</h3>
+                        <p>Andrew was an alright disciple.</p>
+                    </div>
+                    <div class="card-buttons">
+                        <img src="Images/star-david.svg">
+                        <img src="Images/trash-can-outline.svg">
+                        <img src="Images/send.svg">
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="side-panel"></div>
+                    <div class="text">
+                        <h3>Philip</h3>
+                        <p>Philip was an alright disciple.</p>
+                    </div>
+                    <div class="card-buttons">
+                        <img src="Images/star-david.svg">
+                        <img src="Images/trash-can-outline.svg">
+                        <img src="Images/send.svg">
+                    </div>
+                </div>
+            </div>
+            <div class="announcements-trending">
+                 <div class="announcements">
+                    <h2>Announcements</h2>
+                    <div class="content">
+                        <div class="announcement">
+                            <h3>Site Maintenance</h3>
+                            <p>This is a random announcment.</p>
+                        </div>
+                        <div class="announcement-border"></div>
+                        <div class="announcement">
+                            <h3>Community Share Day</h3>
+                            <p>Share this with your community.</p>
+                        </div>
+                        <div class="announcement-border"></div>
+                        <div class="announcement">
+                            <h3>Updated Privacy Policy</h3>
+                            <p>We are spying on you.</p>
+                        </div>
+                    </div>
+                   
+                </div>
+                <div class="trending">
+                    <h2>Trending</h2>
+                    <div class="trending-content">
+                        <div class="trend">
+                            <img src="Images/Prince-of-Peace-hi-res.jpg">
+                            <p>
+                                <span class="tag">@Paul</span>
+                                <br>
+                                <span class="text">Evangelizer to Gentiles</span>
+                            </p>
+                        </div>
+                        <div class="trend">
+                            <img src="Images/Prince-of-Peace-hi-res.jpg">
+                            <p>
+                                <span class="tag">@Simon Peter</span>
+                                <br>
+                                <span class="text">Rock of the Church</span>
+                            </p>
+                        </div>
+                        <div class="trend">
+                            <img src="Images/Prince-of-Peace-hi-res.jpg">
+                            <p>
+                                <span class="tag">@John</span>
+                                <br>
+                                <span class="text">One Whom Jesus Loved</span>
+                            </p>
+                        </div>
+                        <div class="trend">
+                            <img src="Images/Prince-of-Peace-hi-res.jpg">
+                            <p>
+                                <span class="tag">@Judas</span>
+                                <br>
+                                <span class="text">Betrayer</span>
+                            </p>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
         </div>
     </div>
 </body>
